kube-credential-k8s/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-credential
  labels:
    name: kube-credential
    app: kube-credential-system
---
